--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -7,7 +7,18 @@ on:
     branches: [main]
 
 jobs:
-
+  golangci:
+    name: lint
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: 1.22.2
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.60
   audit:
     runs-on: ubuntu-20.04
     steps:
@@ -23,9 +34,6 @@ jobs:
 
     - name: Build
       run: go build -v ./...
-
-    - name: Run list
-      run: make linter
 
     - name: Run tests
       run: make test
