--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,3 +1,4 @@
+version: "2"
 linters:
   disable-all: true
   enable:
@@ -11,12 +12,9 @@ linters:
     - goconst
     - gocritic
     - gocyclo
-    - gofmt
-    - goimports
     - mnd
     - goprintffuncname
     - gosec
-    - gosimple
     - govet
     - intrange
     - ineffassign
@@ -26,41 +24,55 @@ linters:
     - noctx
     - nolintlint
     - staticcheck
-    - stylecheck
     - testifylint
     - unconvert
     - unparam
     - unused
-    - whitespace
+    # - whitespace
+  settings:
+    lll:
+      line-length: 140
+    mnd:
+      # don't include the "operation" and "assign"
+      checks:
+        - argument
+        - case
+        - condition
+        - return
+      ignored-numbers:
+        - "0"
+        - "1"
+        - "2"
+        - "3"
+        - "10"
+      ignored-functions:
+        - strings.SplitN
+    goconst:
+      min-len: 2
+      min-occurrences: 3
+    gofmt:
+      rewrite-rules:
+        - pattern: "interface{}"
+          replacement: "any"
+    whitespace:
+      multi-if: true
+      multi-func: true
+  exclusions:
+    presets:
+      - common-false-positives
+    rules:
+      - path: _test\.go
+        linters:
+          - mnd
+          - funlen
+      - linters:
+          - lll
+        source: "^//go:generate "
 
-linters-settings:
-  lll:
-    line-length: 140
-  mnd:
-    # don't include the "operation" and "assign"
-    checks:
-      - argument
-      - case
-      - condition
-      - return
-    ignored-numbers:
-      - '0'
-      - '1'
-      - '2'
-      - '3'
-      - '10'
-    ignored-functions:
-      - strings.SplitN
-  goconst:
-    min-len: 2
-    min-occurrences: 3
-  gofmt:
-    rewrite-rules:
-      - pattern: 'interface{}'
-        replacement: 'any'
-  whitespace:
-    multi-if: true
-    multi-func: true
+formatters:
+  enable:
+    - goimports
+    - gofumpt
 
 issues:
   max-issues-per-linter: 0
@@ -83,12 +95,3 @@ issues:
     - '\.Value - result 1 \(error\) is always nil'
     - '\.Directive` - .* is unused'
   # Excluding configuration per-path, per-linter, per-text and per-source
-  exclude-rules:
-    - path: _test\.go
-      linters:
-        - mnd
-        - funlen
-    - linters:
-      - lll
-      source: "^//go:generate "
-
